--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "packages/client"
   ],
   "scripts": {
-    "start": "concurrently \"npm start -w server\" \"npm start -w client\""
+    "start": "concurrently \"npm run dev -w server\" \"npm start -w client\"",
+    "build": "concurrently \"npm start -w server\" \"npm run build -w client\""
   }
 }
