--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
   "scripts": {
     "start": "concurrently \"npm run dev -w server\" \"npm start -w client\"",
     "build": "concurrently \"npm start -w server\" \"npm run build -w client\""
+  },
+  "devDependencies": {
+    "concurrently": "^7.6.0"
   }
 }
