--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "packages/client"
   ],
   "scripts": {
-    "start": "concurrently \"npm run dev -w server\" \"npm start -w client\"",
+    "start": "concurrently \"npm run serve -w server\" \"npm start -w client\"",
     "build": "concurrently \"npm start -w server\" \"npm run build -w client\""
   },
   "devDependencies": {
-    "concurrently": "^7.6.0"
+    "concurrently": "^8.0.1"
   }
 }
