--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -3,15 +3,37 @@
   "version": "1.0.0",
   "private": true,
   "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "start": "node index.ts",
-    "dev": "nodemon index.ts"
+    "build": "rimraf _dist && npx tsc",
+    "prestart": "npm run build",
+    "start": "node _dist/index.js",
+    "preserve": "npm run build",
+    "serve": "concurrently \"npx tsc -w\"  \"nodemon _dist/index.js\""
   },
   "dependencies": {
+    "@types/cors": "^2.8.13",
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.14.2",
+    "@types/uuid": "^9.0.1",
+    "bcrypt": "^5.1.0",
+    "concurrently": "^8.0.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "ts-node": "^10.9.1"
+    "express-fileupload": "^1.4.0",
+    "jsonwebtoken": "^9.0.0",
+    "pg": "^8.9.0",
+    "pg-hstore": "^2.3.4",
+    "rimraf": "^4.1.2",
+    "sequelize": "^6.29.0",
+    "typescript": "^5.0.3",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/jsonwebtoken": "^9.0.1",
+    "@types/sequelize": "^4.28.14",
     "nodemon": "^2.0.20"
   }
 }
