--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "packages/server",
     "packages/client"
   ],
+  "engines" : {
+    "node": ">=16"
+  },
   "scripts": {
     "start": "concurrently \"npm run serve -w server\" \"npm start -w client\"",
     "build": "concurrently \"npm start -w server\" \"npm run build -w client\""
