--- a/package.json
+++ b/package.json
@@ -6,14 +6,26 @@
     "packages/server",
     "packages/client"
   ],
-  "engines" : {
+  "engines": {
     "node": ">=16"
   },
   "scripts": {
+    "lint": "eslint \"**/*.{ts,tsx}\"",
     "start": "concurrently \"npm run serve -w server\" \"npm start -w client\"",
     "build": "concurrently \"npm start -w server\" \"npm run build -w client\""
   },
-  "devDependencies": {
-    "concurrently": "^8.0.1"
+  "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.9",
+    "concurrently": "^8.0.1",
+    "eslint": "^8.42.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-standard-with-typescript": "^35.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2",
+    "prettier": "^2.8.8"
   }
 }
